--- a/index.html
+++ b/index.html
@@ -8,134 +8,150 @@
 </head>
 <body>
   <section class="container">
-    <header>
+    <section id="header">
       <div id="status-bar">
         <img src="images/statusbar-light.png" />
       </div>
-      <div id="app-bar">
-        <span id="back"><img src="images/arrow-back.png" /></span>
-        <span id="header-text">
+      <ul id="app-bar">
+        <li id="back"><img src="images/arrow-back.png" /></li>
+        <li id="header-text">
           <h1>Washington & State St</h1>
-        </span>
-      </div>
-      <div id=nav-bar>
-        <div id="next">Next Up</div>
-        <div id="recent">Recently Departed</div>
-      </div>
-    </header>
-    <div class="bus" id="bus1">
-      <div class="line">60</div>
-      <div class="route-info">
-        <span class="destination">Randolph/Harbor Dr</span>
-        <span class="direction">Eastbound</span>
-      </div>
-      <div class="time-info">
-        <span class="time">12:34pm</span>
-        <span class="freq">Every 20 min</span>
-      </div>
-      <div class="stops">
-        <img src="images/stops-icon.png" />
-      </div>
+        </li>
+      </ul>
+      <ul id=nav-bar>
+        <li id="next">Next Up</li>
+        <li id="recent">Recently Departed</li>
+      </ul>
+    </section>
+    <section id="content">
+      <ul class="buses">
+        <li class="bus next-bus" id="bus1">
+          <ul class="bus-info">
+            <li class="line">60</li>
+            <li class="route-info">
+              <ul>
+                <li class="destination">Randolph/Harbor Dr</li>
+                <li class="direction">Eastbound</li>
+              </ul>
+            </li>
+            <li class="time-info">
+              <ul>
+                <li class="time">12:34pm</li>
+                <li class="freq">Every 20 min</li>
+              </ul>
+            </li>
+            <li class="stops"><img src="images/stops-icon.png" /></li>
+          </ul>
+        </li>
+        <li class="bus" id="bus2">
+          <ul class="bus-info">
+            <li class="line">124</li>
+            <li class="route-info">
+              <ul>
+                <li class="destination">Navy Pier</li>
+                <li class="direction">Eastbound</li>
+              </ul>
+            </li>
+            <li class="time-info">
+              <ul>
+                <li class="time">12:37pm</li>
+                <li class="freq">Every 10 min</li>
+              </ul>
+            </li>
+            <li class="stops"><img src="images/stops-icon.png" /></li>
+          </ul>
+        </li>
+        <li class="bus" id="bus3">
+          <ul class="bus-info">
+            <li class="line">151</li>
+            <li class="route-info">
+              <ul>
+                <li class="destination">Devon/Clark</li>
+                <li class="direction">Northbound</li>
+              </ul>
+            </li>
+            <li class="time-info">
+              <ul>
+                <li class="time">12:40pm</li>
+                <li class="freq">Every 16 min</li>
+              </ul>
+            </li>
+            <li class="stops"><img src="images/stops-icon.png" /></li>
+          </ul>
+        </li>
+        <li class="bus" id="bus4">
+          <ul class="bus-info">
+            <li class="line">J14</li>
+            <li class="route-info">
+              <ul>
+                <li class="destination">103rd/Stony Island</li>
+                <li class="direction">Southbound</li>
+              </ul>
+            </li>
+            <li class="time-info">
+              <ul>
+                <li class="time">12:45pm</li>
+                <li class="freq">Every 15 min</li>
+              </ul>
+            </li>
+            <li class="stops"><img src="images/stops-icon.png" /></li>
+          </ul>
+        </li>
+        <li class="bus" id="bus5">
+          <ul class="bus-info">
+            <li class="line">124</li>
+            <li class="route-info">
+              <ul>
+                <li class="destination">Navy Pier</li>
+                <li class="direction">Southbound</li>
+              </ul>
+            </li>
+            <li class="time-info">
+              <ul>
+                <li class="time">12:50pm</li>
+                <li class="freq">Every 10 min</li>
+              </ul>
+            </li>
+            <li class="stops"><img src="images/stops-icon.png" /></li>
+          </ul>
+        </li>
+        <li class="bus reroute" id="bus6">
+          <ul class="bus-info">
+            <li class="line">6x</li>
+            <li class="route-info">Jackson Park Express</li>
+            <li class="reroute-info">REROUTE</li>
+            <li class="alerts-img"><img src="images/report.png" /></li>
+          </ul>
+        </li>
+        <li class="bus out-of-service" id="bus7">
+          <ul>
+            <li class="line">4</li>
+            <li class="route-info">Cottage Grove</li>
+            <li class="reroute-info">Resumes 12:10am</li>
+            <li class="alerts-img"><img src="images/report.png" /></li>
+          </ul>
+        </li>
+        <li class="bus out-of-service" id="bus8">
+          <ul class="bus-info">
+            <li class="line">20</li>
+            <li class="route-info">Madison</li>
+            <li class="reroute-info">Resumes 12:10am</li>
+            <li class="alerts-img"><img src="images/report.png" /></li>
+          </ul>
+        </li>
+        <li class="bus out-of-service" id="bus9">
+          <ul>
+            <li class="line">157</li>
+            <li class="route-info">Streeterville/Taylor</li>
+            <li class="reroute-info">Resumes 6:00am</li>
+            <li class="alerts-img"><img src="images/report.png" /></li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <div id="phone-bar">
+      <img src="images/navbar-black.png" />
     </div>
-    <div class="bus" id="bus2">
-      <div class="line">124</div>
-      <div class="route-info">
-        <span class="destination">Navy Pier</span>
-        <span class="direction">Eastbound</span>
-      </div>
-      <div class="time-info">
-        <span class="time">12:37pm</span>
-        <span class="freq">Every 10 min</span>
-      </div>
-      <div class="stops">
-        <img src="images/stops-icon.png" />
-      </div>
-    </div>
-    <div class="bus" id="bus3">
-      <div class="line">151</div>
-      <div class="route-info">
-        <span class="destination">Devon/Clark</span>
-        <span class="direction">Northbound</span>
-      </div>
-      <div class="time-info">
-        <span class="time">12:40pm</span>
-        <span class="freq">Every 16 min</span>
-      </div>
-      <div class="stops">
-        <img src="images/stops-icon.png" />
-      </div>
-    </div>
-    <div class="bus" id="bus4">
-      <div class="line">J14</div>
-      <div class="route-info">
-        <span class="destination">103rd/Stony Island</span>
-        <span class="direction">Southbound</span>
-      </div>
-      <div class="time-info">
-        <span class="time">12:45pm</span>
-        <span class="freq">Every 15 min</span>
-      </div>
-      <div class="stops">
-        <img src="images/stops-icon.png" />
-      </div>
-    </div>
-    <div class="bus" id="bus5">
-      <div class="line">124</div>
-      <div class="route-info">
-        <span class="destination">Navy Pier</span>
-        <span class="direction">Southbound</span>
-      </div>
-      <div class="time-info">
-        <span class="time">12:50pm</span>
-        <span class="freq">Every 10 min</span>
-      </div>
-      <div class="stops">
-        <img src="images/stops-icon.png" />
-      </div>
-    </div>
-    <div id="alerts-section">
-      <div class="bus reroute" id="bus6">
-        <div class="line">6x</div>
-        <div class="route-info">
-          Jackson Park Express
-        </div>
-        <div class="reroute-info">
-          REROUTE
-        </div>
-        <span class="alerts-img"><img src="images/report.png" /></span>
-      </div>
-      <div class="bus out-of-service" id="bus7">
-        <div class="line">4</div>
-        <div class="route-info">
-          Cottage Grove
-        </div>
-        <div class="reroute-info">
-          Resumes 12:10am
-        </div>
-        <span class="alerts-img"><img src="images/report.png" /></span>
-      </div>
-      <div class="bus out-of-service" id="bus8">
-        <div class="line">20</div>
-        <div class="route-info">
-          Madison
-        </div>
-        <div class="reroute-info">
-          Resumes 12:10am
-        </div>
-        <span class="alerts-img"><img src="images/report.png" /></span>
-      </div>
-      <div class="bus out-of-service" id="bus9">
-        <div class="line">157</div>
-        <div class="route-info">
-          Streeterville/Taylor
-        </div>
-        <div class="reroute-info">
-          Resumes 6:00am
-        </div>
-        <span class="alerts-img"><img src="images/report.png" /></span>
-      </div>
-    </div>
-    <img src="images/navbar-black.png" />
   </section>
 </body>
 </html>
