Update some nested lists to divs and spans

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
           <ul class="bus-info">
             <li class="line">60</li>
             <li class="route-info">
-              <ul>
-                <li class="destination">Randolph/Harbor Dr</li>
-                <li class="direction">Eastbound</li>
-              </ul>
+              <div>
+                <span class="destination">Randolph/Harbor Dr</span>
+                <span class="direction">Eastbound</span>
+              </div>
             </li>
             <li class="time-info">
-              <ul>
-                <li class="time">12:34pm</li>
-                <li class="freq">Every 20 min</li>
-              </ul>
+              <div>
+                <span class="time">12:34pm</span>
+                <span class="freq">Every 20 min</span>
+              </div>
             </li>
             <li class="stops"><img src="images/stops-icon.png" /></li>
           </ul>
@@ -47,16 +47,16 @@
           <ul class="bus-info">
             <li class="line">124</li>
             <li class="route-info">
-              <ul>
-                <li class="destination">Navy Pier</li>
-                <li class="direction">Eastbound</li>
-              </ul>
+              <div>
+                <span class="destination">Navy Pier</span>
+                <span class="direction">Eastbound</span>
+              </div>
             </li>
             <li class="time-info">
-              <ul>
-                <li class="time">12:37pm</li>
-                <li class="freq">Every 10 min</li>
-              </ul>
+              <div>
+                <span class="time">12:37pm</span>
+                <span class="freq">Every 10 min</span>
+              </div>
             </li>
             <li class="stops"><img src="images/stops-icon.png" /></li>
           </ul>
@@ -65,16 +65,16 @@
           <ul class="bus-info">
             <li class="line">151</li>
             <li class="route-info">
-              <ul>
-                <li class="destination">Devon/Clark</li>
-                <li class="direction">Northbound</li>
-              </ul>
+              <div>
+                <span class="destination">Devon/Clark</span>
+                <span class="direction">Northbound</span>
+              </div>
             </li>
             <li class="time-info">
-              <ul>
-                <li class="time">12:40pm</li>
-                <li class="freq">Every 16 min</li>
-              </ul>
+              <div>
+                <span class="time">12:40pm</span>
+                <span class="freq">Every 16 min</span>
+              </div>
             </li>
             <li class="stops"><img src="images/stops-icon.png" /></li>
           </ul>
@@ -83,16 +83,16 @@
           <ul class="bus-info">
             <li class="line">J14</li>
             <li class="route-info">
-              <ul>
-                <li class="destination">103rd/Stony Island</li>
-                <li class="direction">Southbound</li>
-              </ul>
+              <div>
+                <span class="destination">103rd/Stony Island</span>
+                <span class="direction">Southbound</span>
+              </div>
             </li>
             <li class="time-info">
-              <ul>
-                <li class="time">12:45pm</li>
-                <li class="freq">Every 15 min</li>
-              </ul>
+              <div>
+                <span class="time">12:45pm</span>
+                <span class="freq">Every 15 min</span>
+              </div>
             </li>
             <li class="stops"><img src="images/stops-icon.png" /></li>
           </ul>
@@ -101,16 +101,16 @@
           <ul class="bus-info">
             <li class="line">124</li>
             <li class="route-info">
-              <ul>
-                <li class="destination">Navy Pier</li>
-                <li class="direction">Southbound</li>
-              </ul>
+              <div>
+                <span class="destination">Navy Pier</span>
+                <span class="direction">Southbound</span>
+              </div>
             </li>
             <li class="time-info">
-              <ul>
-                <li class="time">12:50pm</li>
-                <li class="freq">Every 10 min</li>
-              </ul>
+              <div>
+                <span class="time">12:50pm</span>
+                <span class="freq">Every 10 min</span>
+              </div>
             </li>
             <li class="stops"><img src="images/stops-icon.png" /></li>
           </ul>
